--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             To be notified when the next Kickstarter goes live enter your email below.
         </p>
         <p>-Thanks!</p>
-        <div class="input-group mt-5 mb-5">
+        <div id="inputBlock" class="input-group mt-5 mb-5">
             <span class="input-group-text" id="basic-addon1">@</span>
             <input id="email" type="text" class="form-control" placeholder="Email address" aria-label="Email address"
                 aria-describedby="basic-addon1">
@@ -80,6 +80,7 @@
         const response = await axios.post("https://dt7r8xh2l8.execute-api.us-east-1.amazonaws.com/prod", {
             "email": emailField.value
         });
+        document.getElementById("inputBlock").style.display = "none";
         console.log(`response: ${JSON.stringify(response.data, null, 2)}`);
     }
 </script>
